feat: añadir endpoint para obtener asignaciones de una organización con query
